Added AdMob, Stripe and updated capacitor to v3

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
     <string name="app_name">SocFollowers</string>
+    <string name="admob_app_id">ca-app-pub-7650228313887885~1049862177</string>
     <string name="title_activity_main">SocFollowers</string>
     <string name="package_name">ru.laravelka.socfollowers</string>
     <string name="custom_url_scheme">ru.laravelka.socfollowers</string>
